# matrix-matrix-multiply

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: calc_speed_up.cpp.6AEEE2B23E965869.idx  calc_speed_up.h.359BDDF06B46A4FB.idx  check.cpp.273030C0A5310A87.idx  check.h.C8CAD14F31270ED9.idx  dgemm_avx256.cpp.2025F40040AB548B.idx  dgemm_avx256.h.C0916A9750E8F05C.idx  dgemm_avx512.h.D620F5E814C2741A.idx  dgemm_basic.cpp.8FEACCC16F31F553.idx  dgemm_basic.h.30C302DDDAA72FA0.idx  dgemm_basic_blocked.cpp.FD55374E22C290BA.idx  dgemm_basic_blocked.h.11BE95BB7C9D4414.idx  dgemm_blocked.h.938B00A7B7325E83.idx  dgemm_openmp.h.04AFDE4A32A5D56D.idx  dgemm_unrolled.h.8DE2262F74055173.idx  get_timestamp.cpp.E109BB6B3DFA8424.idx  get_timestamp.h.9C6E7EB44C0D9E1B.idx  main.cpp.8FB857D84DBF133C.idx  mtx.cpp.66604C2CB75E17FF.idx  mtx.h.71BED62CE5C5A3C8.idx
asm/: Makefile  a.out  dgemm
asm/O3_asm/: dgemm_avx256.lst  dgemm_avx256.s
intel_article/: dgemm  dgemm.c
src/: CMakeLists.txt  README.md  block_denominator.h  calc_speed_up.cpp  calc_speed_up.h  check.cpp  dgemm_avx256.cpp  dgemm_avx256.h  dgemm_avx512.cpp  dgemm_avx512.h  dgemm_basic.cpp  dgemm_basic.h  dgemm_basic_blocked.cpp  dgemm_basic_blocked.h  dgemm_blocked.cpp  dgemm_blocked.h  dgemm_blocked_avx256.cpp  dgemm_blocked_avx256.h  dgemm_blocked_avx256_unroll.cpp  dgemm_openmp.cpp  dgemm_openmp_256.cpp  dgemm_openmp_256.h  dgemm_openmp_256_unroll.cpp  dgemm_unrolled_avx256.cpp  dgemm_unrolled_avx256.h  get_timestamp.cpp  get_timestamp.h  main.cpp  main_dgemm_basic.cpp  main_dgemm_basic_blocked.cpp  main_dgemm_unrolled_avx256.cpp  mtx.cpp  mtx.h  style.clang-format
src/avx512/: dgemm_blocked.cpp  dgemm_openmp.h  dgemm_unrolled.cpp  dgemm_unrolled.h
src/main_independent/: main_dgemm_avx256.cpp
